[package]
name = "sentinel-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = {version = "0.8.4", features = ["macros"]}
chrono = "0.4.41"
rusqlite = { version = "0.36.0", features = ["bundled"] }
serde = {version = "1.0.219", features = ["derive"]}
serde_json = "1.0.140"
sysinfo = "0.35.2"
tokio = {version = "1.45.1", features = ["full"]}
