[package]
name = "sentinel-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
axum = {version = "0.8.4", features = ["macros"]}
bollard = {version = "0.19.1", features = ["json_data_content"]}
chrono = "0.4.41"
futures-util = "0.3.31"
rusqlite = { version = "0.36.0", features = ["bundled"] }
serde = {version = "1.0.219", features = ["derive"]}
sysinfo = "0.35.2"
tokio = {version = "1.45.1", features = ["full"]}
